# diddiparser2

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  noxfile.py  release-requirements.txt  sample.diddi  setup.cfg  setup.py
.github/: no-response.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lock.yml
diddiparser2/: __init__.py  __main__.py  cli.py  diddiscript_types.py  messages.py  parser.py  parserutils.py
diddiparser2/editor/: __init__.py  __main__.py  formatter.py  main.py  menu.py
diddiparser2/lib/: __init__.py  _builtin.py  fileio.py  math.py  simpleio.py  sqlite.py  subprocessing.py
docs/: cli.rst  conf.py  contrib.rst  editor.rst  index.rst  reference.rst  requirements.txt  tutorial.rst
docs/appendix/: diddiscript-language.rst  index.rst  source-anatomy.rst
docs/language/: _builtin.rst  comments.rst  functions.rst  index.rst  load_extension.rst  load_module.rst  variables.rst
docs/language/stdlib/: _builtin.rst  fileio.rst  index.rst  math.rst  simpleio.rst  sqlite.rst  subprocessing.rst
dsgp/: dsgp-0.md  dsgp-000.md  dsgp-002.md  dsgp-003.md  dsgp-004.md  dsgp-005.md  dsgp-1.md  dsgp-2.md  dsp-004.md
tests/: dsgp_3_example.py  dsgp_4_example.diddi  my_extension.py  requirements.txt  sample-text.txt  test-dgsp1-behavior.diddi  test-dsgp3-example.diddi  test-lib--builtin.diddi  test-lib-math.diddi  test-lib-simpleio.diddi  test-lib-sqlite.diddi  test-lib-subprocessing.diddi  test-tool-functions.diddi
