[metadata]
name = diddiparser2
version = 1.1.0.post1
author = Diego Ramirez
author_email = dr01191115@gmail.com
description = The official DiddiScript parser.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://diddiparser2.readthedocs.io
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Topic :: Software Development
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries
license = MIT License
license_file = LICENSE.txt
keywords = diddiscript python parser
project_urls =
    Documentation = http://diddiparser2.readthedocs.io
    Tracker = http://github.com/DiddiLeija/diddiparser2/issues
    Source = http://github.com/DiddiLeija/diddiparser2

[options]
packages =
    diddiparser2
    diddiparser2.lib
    diddiparser2.editor
install_requires =
    colorama>=0.4.0
python_requires = >=3.7
zip_safe = False

[options.entry_points]
console_scripts =
    diddiparser2 = diddiparser2.cli:main
    diddiscript-console = diddiparser2.parser:interactive_console
    diddiscript-editor = diddiparser2.editor.main:main

[flake8]
exclude = .nox/
max-line-length = 127

[isort]
profile = black
